--- a/trainwreck-frontend/src/App.css
+++ b/trainwreck-frontend/src/App.css
@@ -28,6 +28,61 @@
   color: #61dafb;
 }
 
+/* Code imported from Figma */
+
+html{
+  height: 100%
+}
+
+body{
+  overflow-y: scroll;
+  background: #140A51;
+}
+
+/* The Trainwrecks */
+.trainwreck_headline {
+  width: 450px;
+  top: 50px;
+  margin: 0 auto;
+  height: 150px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  white-space: nowrap;
+
+  color: #FFFFFF;
+
+  border: 1px solid #000000;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.take_text {
+  width: 475px;
+  top: 50px;
+  margin: 0 auto;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  white-space: nowrap;
+
+  color: #FFFFFF;
+}
+
+.center {
+  margin: 0 auto;
+  width: 50%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
